# eyeBOLD

./: .gitignore  README.md  app.py  pyproject.toml
data/: README.md
scripts/: build_rtree_index.py  build_rtree_index_databse7nov.py  csv_to_json_Nov-7.py  extract_country_codes_and_zones_from_db_Nov-7.py  extract_country_codes_from_db_Nov-7.py
scripts/archive/: csv_to_json.py
static/: country-and-climatezone-groups.js  geography.js  index.html  map.js  script.js  style.css  taxonomy.js
